<resources>
    <string name="app_name">Corona Live Updates</string>

    <string name="confirmed">Confirmed</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>

    <string name="label_connection_error">Please check your network connection (Retry).</string>
    <string name="label_last_update">Last update: %s</string>
    <string name="reset">Reset</string>
    <string name="googlemap_api_key">AIzaSyCJ4ATPgO76lcy9Wghbwdaa-RjDnIkSHXk</string>

    <string name="fb_bannerId">IMG_16_9_APP_INSTALL#873309106448515_873310849781674</string>
    <string name="fb_interstitialId">IMG_16_9_APP_INSTALL#873309106448515_873354953110597</string>
    <string name="soarted_by">Soarted By : %s</string>
    <string name="symptoms_amp_prevention_tips"><![CDATA[Symptoms & Prevention Tips]]></string>
    <string name="label_besafe"><![CDATA[Be Safe & Healthy]]></string>
    <string name="enter_country_name">Enter country name…</string>
    <string name="country_with_colon">Country:</string>
    <string name="state_with_colon">State:</string>
    <string name="confirmed_with_colon">Confirmed:</string>
    <string name="recovered_with_colon">Recovered:</string>
    <string name="deaths_with_colon">Deaths:</string>
    <string name="active_with_colon">Active:</string>
    <string name="covid_19">COVID-19</string>
    <string name="pray_for">Pray For</string>
    <string name="corona_virus_nvictims">Corona Virus\nVictims</string>
    <string name="please_wait">Please wait…</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="retry">ReTry</string>
    <string name="error_enter_country_name">Please enter country name</string>
</resources>