<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="model"
            type="com.example.coronaliveupdates.model.MapDataModel" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_7sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:contentPadding="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtRange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:fontFamily="@font/mediam_font"
                    android:text='@{model.countryRegion??""}'
                    android:textColor="@color/blackgray"
                    android:textSize="@dimen/_20sdp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    app:cardBackgroundColor="#FFEDD8"
                    app:cardCornerRadius="@dimen/_3sdp"
                    app:cardElevation="0dp"
                    app:contentPaddingBottom="@dimen/_2sdp"
                    app:contentPaddingLeft="@dimen/_12sdp"
                    app:contentPaddingRight="@dimen/_12sdp"
                    app:contentPaddingTop="@dimen/_2sdp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:text='@{TextUtils.isEmpty(model.provinceState)?"":"State: "+model.provinceState+", "}'
                            android:textColor="@color/blackgray"
                            android:textSize="@dimen/_10sdp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_2sdp"
                            android:fontFamily="serif"
                            android:text='@{"Active: "+model.active??""}'
                            android:textColor="@color/blackgray"
                            android:textSize="@dimen/_10sdp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardConfirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_6sdp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/cardorange"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/semibold_font"
                            android:padding="@dimen/_3sdp"
                            android:text="@string/confirmed"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_13sdp" />

                        <TextView
                            android:id="@+id/txtConfirmCounter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="serif"
                            android:padding="@dimen/_2sdp"
                            android:text='@{model.confirmed??""}'
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardRecovered"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_6sdp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/cardgreen"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/semibold_font"
                            android:padding="@dimen/_3sdp"
                            android:text="@string/recovered"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_13sdp" />

                        <TextView
                            android:id="@+id/txtRecoveredCounter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="serif"
                            android:padding="@dimen/_2sdp"
                            android:text='@{model.recovered??""}'
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardDeaths"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/cardred"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/semibold_font"
                            android:padding="@dimen/_3sdp"
                            android:text="@string/deaths"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_13sdp" />

                        <TextView
                            android:id="@+id/txtDeathsCounter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="serif"
                            android:padding="@dimen/_2sdp"
                            android:text='@{model.deaths??""}'
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>